...
  ~ as published by the Free Software Foundation; either version 3
  ~ of the License, or (at your option) any later version.
  -->

<resources>
    <string name="main_nav_main">Main-Screen</string>
    <string name="main_nav_buttons">Buttons</string>
    <string name="main_nav_mark">Marks</string>
    <string name="main_nav_mark_list">Mark-List</string>
    <string name="main_nav_calculateMark">Calculate marks</string>
    <string name="main_nav_plan">Plan</string>
    <string name="main_nav_timetable">TimeTable</string>
    <string name="main_nav_notes">Notes</string>
    <string name="main_nav_timer">School-Timer</string>
    <string name="main_nav_learn">Learning</string>
    <string name="main_nav_learningCards">Learning-Cards</string>
    <string name="main_nav_bookmarks">Bookmarks</string>
    <string name="main_nav_else">Other</string>
    <string name="main_speech">Voice command</string>
    <string name="main_menu_settings">Settings</string>
    <string name="main_menu_help">Help</string>
    <string name="main_menu_close">Close</string>
    <string name="main_today">Today</string>
    <string name="main_today_timetable">Current Subjects</string>
    <string name="main_top5Notes">Top 5 Notes</string>
    <string name="main_importantToDos">5 important ToDos</string>
    <string name="main_taggedBookMarks">Tagged Bookmarks</string>
    <string name="main_quickQuery">Fast Query</string>
    <string name="main_importantToDos_onlyNotSolved">only unsolved</string>
    <string name="main_savedTimeTables">Saved Timetables</string>
    <string name="main_savedMarkList">Saved Marklists</string>
    <string name="main_noEntry">No Entry</string>
    <string name="main_refreshSuccessFully">Successfully updated</string>
    <string name="main_speak_todo">Tutu</string>
    <string name="main_speak_note_success">Note successfully saved!</string>
    <string name="main_speak_todo_success">ToDo successfully saved!</string>
    <string name="marklist_state">State</string>
...
    <string name="settings_general_whatsNew_summary">Display the news screen again</string>
    <string name="settings_general_database">Database</string>
    <string name="settings_general_deleteMemories_title">Erase memories</string>
    <string name="settings_general_deleteMemories_summary">Erase reminders after they expire</string>
    <string name="settings_general_reset_database_title">Reset database</string>
    <string name="settings_general_reset_database_summary">Reset the database to the delivery state!</string>
    <string name="settings_start">Home screen</string>
    <string name="settings_start_summary">Settings for the start module, selection of widgets on the start screen, activation and deactivation of modules</string>
    <string name="settings_start_start_header">Select widgets for home page</string>
    <string name="settings_start_start_summary">Select the widgets that appear on the home page.</string>
    <string name="settings_start_shown_modules_header">Show modules</string>
    <string name="settings_start_shown_modules_summary">Please select the modules to be displayed!</string>
    <string name="settings_start_start_module_header">Select start module</string>
    <string name="settings_start_start_module_summary">Please select the start module!</string>
    <string name="settings_school">Thematic settings</string>
    <string name="settings_school_summary">Various settings for the individual modules!</string>
    <string name="settings_school_expert_header">Expert mode (note list)</string>
...
    <string name="sys_new">New</string>
    <string name="sys_open">Open</string>
    <string name="sys_edit">Edit</string>
    <string name="sys_delete">Delete</string>
    <string name="sys_deleted">Deleted</string>
    <string name="sys_undo">Undo</string>
    <string name="sys_save">Save</string>
    <string name="sys_cancel">Cancel</string>
    <string name="sys_description">Description</string>
    <string name="sys_title">Title</string>
    <string name="sys_memory">Memory</string>
    <string name="sys_showData">Show Data</string>

...
