...
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="10"
                    android:layout_margin="8dp"
                    tools:ignore="UselessParent">
                    <TableRow
                        android:id="@+id/trMarkList"
                        android:layout_width="match_parent"
                        android:background="@drawable/tbl_border"
                        android:layout_height="20dp"
                        android:orientation="vertical"
                        android:weightSum="10"
                        android:layout_marginBottom="4dp">
...
                            android:layout_width="0dp"
                            android:layout_height="30dp"
                            android:gravity="center"
                            android:layout_gravity="center"/>
                    </TableRow>
                    <TableRow
                        android:id="@+id/trMark"
                        android:layout_width="match_parent"
                        android:background="@drawable/tbl_border"
                        android:layout_height="20dp"
                        android:orientation="vertical"
                        android:weightSum="10"
                        android:layout_marginBottom="4dp">
...
                            android:layout_width="0dp"
                            android:layout_height="30dp"
                            android:gravity="center"
                            android:layout_gravity="center"/>
                    </TableRow>
                    <TableRow
                        android:id="@+id/trTimeTable"
                        android:layout_width="match_parent"
                        android:background="@drawable/tbl_border"
                        android:layout_height="20dp"
                        android:orientation="vertical"
                        android:weightSum="10"
                        android:layout_marginBottom="4dp">
...
                            android:layout_width="0dp"
                            android:layout_height="30dp"
                            android:gravity="center"
                            android:layout_gravity="center"/>
                    </TableRow>
                    <TableRow
                        android:id="@+id/trNote"
                        android:layout_width="match_parent"
                        android:background="@drawable/tbl_border"
                        android:layout_height="20dp"
                        android:orientation="vertical"
                        android:weightSum="10"
                        android:layout_marginBottom="4dp">
...
                            android:layout_width="0dp"
                            android:layout_height="30dp"
                            android:gravity="center"
                            android:layout_gravity="center"/>
                    </TableRow>
                    <TableRow
                        android:id="@+id/trTimer"
                        android:layout_width="match_parent"
                        android:background="@drawable/tbl_border"
                        android:layout_height="20dp"
                        android:orientation="vertical"
                        android:weightSum="10"
                        android:layout_marginBottom="4dp">
...
                            android:layout_width="0dp"
                            android:layout_height="30dp"
                            android:gravity="center"
                            android:layout_gravity="center"/>
                    </TableRow>
                    <TableRow
                        android:id="@+id/trToDo"
                        android:layout_width="match_parent"
                        android:background="@drawable/tbl_border"
                        android:layout_height="20dp"
                        android:orientation="vertical"
                        android:weightSum="10"
                        android:layout_marginBottom="4dp">
...
                            android:layout_width="0dp"
                            android:layout_height="30dp"
                            android:gravity="center"
                            android:layout_gravity="center"/>
                    </TableRow>
                    <TableRow
                        android:id="@+id/trExport"
                        android:layout_width="match_parent"
                        android:background="@drawable/tbl_border"
                        android:layout_height="20dp"
                        android:orientation="vertical"
                        android:weightSum="10"
                        android:layout_marginBottom="4dp">
...
                            android:layout_width="0dp"
                            android:layout_height="30dp"
                            android:scaleType="fitCenter"
                            android:padding="4dp"
                            android:contentDescription="@string/app_name"/>
                        <TextView
                            android:text="@string/main_menu_export"
                            android:layout_weight="9"
                            android:layout_width="0dp"
                            android:layout_height="30dp"
                            android:gravity="center"
                            android:layout_gravity="center"/>
                    </TableRow>
                    <TableRow
                        android:id="@+id/trSettings"
                        android:layout_width="match_parent"
                        android:background="@drawable/tbl_border"
                        android:layout_height="20dp"
                        android:orientation="vertical"
                        android:weightSum="10"
                        android:layout_marginBottom="4dp">
...
                            android:layout_width="0dp"
                            android:layout_height="30dp"
                            android:scaleType="fitCenter"
                            android:padding="4dp"
                            android:contentDescription="@string/app_name"/>
                        <TextView
                            android:text="@string/main_menu_settings"
                            android:layout_weight="9"
                            android:layout_width="0dp"
                            android:layout_height="30dp"
                            android:gravity="center"
                            android:layout_gravity="center"/>
                    </TableRow>
                    <TableRow
                        android:id="@+id/trHelp"
                        android:layout_width="match_parent"
                        android:background="@drawable/tbl_border"
                        android:layout_height="20dp"
                        android:orientation="vertical"
                        android:weightSum="10"
                        android:layout_marginBottom="4dp">
...
